[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/BloodDrop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BloodSplat.gd" type="Script" id=2]

[node name="BloodSplat" type="Node2D"]
script = ExtResource( 2 )
offset = 100.0
force = 2000.0
drop_size = 10.0

[node name="BloodDrops" type="Node2D" parent="."]

[node name="BloodDrop" parent="BloodDrops" instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
